# pagecryptor

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  decrypt.js  example.html  example2.html  grocery-secret.html  grocery.html  package.json  pagecryptor.py  pyproject.toml  requirements.in  requirements.txt  test_decrypt.js
.github/workflows/: build.yml
pagecryptor/: decrypt.js  pagecryptor.py
tests/: pctest.bats  runtest.sh  test_decrypt.js
tests/input/: test1.expected  test1.html  test2.expected  test2.html  test3.expected  test3.html  test4.expected  test4.html  test5.expected  test5.html
