[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pagecryptor"
version = "0.2.0"
description = "Encrypt an HTML page for client-side self decryption."
authors = [
    { name="Joseph Kroesche" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [ "LICENSE.md" ]
dependencies = [
    "pycryptodome"
]

[project.scripts]
pagecryptor = "pagecryptor.pagecryptor:cli"

[tool.setuptools]
packages = ["pagecryptor"]
package-data = { "pagecryptor" = ["decrypt.js"] }

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "UP",       # pyupgrade
    "ANN",      # flake8 annotations
    "B",        # flake8 bugbear
    "SIM",      # flake8 simplify
    "PERF",     # flake8 perflint
    "RUF",      # ruff rules
    "D",        # pydocstyle
]
ignore = [
    "D203",     # blank line nonsense
    "D213",     # summary second line
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
